# Simbi-Info-Bot

./: .gitignore  Dockerfile  Makefile  Pipfile  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  simbi-info.py
.github/workflows/: main.yml
logic/scheduler/: tasks.py
logic/tasks/: birth.py  logs.py  mercado_topografico.py  presentation.py  revaluation.py  status_verify_mt.py  tasks.py
utils/: azure_devops.py  birthday.py  generate_presentation.py  get_time.py  logging.py  spread.py
utils/mercado_topografico/: github_report.py
utils/mercado_topografico/azure_devops/: base.py  estimate.py  report.py  work_items.py
utils/mercado_topografico/google_apis/: presentation.py
utils/mercado_topografico/infra_tools/: deployment.py
utils/mercado_topografico/status_verify/: utils_status_mt.py
utils/supabase/: SupabaseClient.py
